// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostTemplate /> Should match snapshot 1`] = `
.c27 {
  width: 16rem;
  border: 1px solid #333333;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.6rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c27:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c27:disabled {
  opacity: 0.4;
}

.c11 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c19 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c24 .c10 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c24 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c24 img {
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
  width: 100%;
  max-width: 100%;
}

.c24:hover a {
  color: #dc143c;
}

.c24:hover img {
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

.c25 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c23 {
  max-width: 100%;
  width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c29 {
  width: 100%;
  text-align: center;
}

.c29 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c30 pre[class*='language-'],
.c30 code[class*='language-'] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,'Andale Mono','Ubuntu Mono','Courier New',monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c30 pre[class*='language-']::selection,
.c30 code[class*='language-']::selection,
.c30 pre[class*='language-'] *::selection,
.c30 code[class*='language-'] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c30 pre[class*='language-'] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c30:not(pre) > code[class*='language-'] {
  padding: 0.1em 0.3em;
  border-radius: 0.3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c30 .namespace {
  opacity: 0.7;
}

.c30 .token.doctype .token.doctype-tag {
  color: #569cd6;
}

.c30 .token.doctype .token.name {
  color: #9cdcfe;
}

.c30 .token.comment,
.c30 .token.prolog {
  color: #6a9955;
}

.c30 .token.punctuation,
.c30 .language-html .language-css .token.punctuation,
.c30 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c30 .token.property,
.c30 .token.tag,
.c30 .token.boolean,
.c30 .token.number,
.c30 .token.constant,
.c30 .token.symbol,
.c30 .token.inserted,
.c30 .token.unit {
  color: #b5cea8;
}

.c30 .token.selector,
.c30 .token.attr-name,
.c30 .token.string,
.c30 .token.char,
.c30 .token.builtin,
.c30 .token.deleted {
  color: #ce9178;
}

.c30 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c30 .token.operator,
.c30 .token.entity {
  color: #d4d4d4;
}

.c30 .token.operator.arrow {
  color: #569cd6;
}

.c30 .token.atrule {
  color: #ce9178;
}

.c30 .token.atrule .token.rule {
  color: #c586c0;
}

.c30 .token.atrule .token.url {
  color: #9cdcfe;
}

.c30 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c30 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c30 .token.keyword {
  color: #569cd6;
}

.c30 .token.keyword.module,
.c30 .token.keyword.control-flow {
  color: #c586c0;
}

.c30 .token.function,
.c30 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c30 .token.regex {
  color: #d16969;
}

.c30 .token.important {
  color: #569cd6;
}

.c30 .token.italic {
  font-style: italic;
}

.c30 .token.constant {
  color: #9cdcfe;
}

.c30 .token.class-name,
.c30 .token.maybe-class-name {
  color: #4ec9b0;
}

.c30 .token.console {
  color: #9cdcfe;
}

.c30 .token.parameter {
  color: #9cdcfe;
}

.c30 .token.interpolation {
  color: #9cdcfe;
}

.c30 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c30 .token.boolean {
  color: #569cd6;
}

.c30 .token.property,
.c30 .token.variable,
.c30 .token.imports .token.maybe-class-name,
.c30 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c30 .token.selector {
  color: #d7ba7d;
}

.c30 .token.escape {
  color: #d7ba7d;
}

.c30 .token.tag {
  color: #569cd6;
}

.c30 .token.tag .token.punctuation {
  color: #808080;
}

.c30 .token.cdata {
  color: #808080;
}

.c30 .token.attr-name {
  color: #9cdcfe;
}

.c30 .token.attr-value,
.c30 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c30 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c30 .token.entity {
  color: #569cd6;
}

.c30 .token.namespace {
  color: #4ec9b0;
}

.c30 pre[class*='language-javascript'],
.c30 code[class*='language-javascript'],
.c30 pre[class*='language-jsx'],
.c30 code[class*='language-jsx'],
.c30 pre[class*='language-typescript'],
.c30 code[class*='language-typescript'],
.c30 pre[class*='language-tsx'],
.c30 code[class*='language-tsx'] {
  color: #9cdcfe;
}

.c30 pre[class*='language-css'],
.c30 code[class*='language-css'] {
  color: #ce9178;
}

.c30 pre[class*='language-html'],
.c30 code[class*='language-html'] {
  color: #d4d4d4;
}

.c30 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c30 .language-html .token.punctuation {
  color: #808080;
}

.c30 pre[data-line] {
  position: relative;
}

.c30 pre[class*='language-'] > code[class*='language-'] {
  position: relative;
  z-index: 1;
}

.c30 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c31 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c31 iframe[src*='ads'] {
  display: none;
}

.c31 p {
  width: 100%;
  margin: 2.4rem 0;
  word-wrap: break-word;
}

.c31 a,
.c31 a:visited,
.c31 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c31 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c31 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c31 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c31 pre code {
  color: inherit;
  background: inherit;
}

.c31 img {
  max-width: 100%;
}

.c31 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c31 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c31 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c31 hr {
  border: none;
  border: 1px solid red;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c31 ul,
.c31 ol {
  margin: 2.4rem 4.0rem;
}

.c31 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c31 table {
  width: 100%;
  border-collapse: collapse;
}

.c31 table td,
.c31 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c31 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c8 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c32 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c17 {
  max-width: 96rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.6rem;
  padding-bottom: 6.4rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c17 .c10 {
  margin-right: calc(1.6rem - 1rem);
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 2.4rem;
}

.c15 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}

.c15:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c6 {
  width: 27rem;
  height: 100%;
  background: #000000;
  border-top-right-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c6 .c12 {
  margin-top: 6.4rem;
}

.c6 .c12 img {
  border: 0.5rem solid #dc143c;
}

.c6.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c9 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c7 svg {
  width: 3rem;
  color: #FFFFFF;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c7 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c7 .menuIcon {
  padding: 0;
}

.c14 {
  width: 90%;
  margin: 4rem 0;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.25rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c16 {
  padding-top: 6.4rem;
  padding-left: 20px;
}

.c20 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  padding: 0.5rem 1.6rem;
}

.c21:disabled {
  outline: 0.1rem solid #dc143c;
}

.c22 {
  max-width: 120rem;
  width: 100%;
  margin-bottom: 6.4rem;
}

.c28 {
  width: 100%;
  margin: 0 auto;
  padding: 0;
}

.c26 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 2.4rem;
  padding-top: 1.6rem;
}

@media (max-width:360px) {
  .c23 {
    grid-template-columns: 1fr;
  }
}

@media print {
  .c30 pre[class*='language-'],
  .c30 code[class*='language-'] {
    text-shadow: none;
  }
}

@media (max-width:768px) {
  .c31 {
    font-size: 2rem;
  }

  .c31 pre {
    width: 82%;
  }

  .c31 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c17 {
    margin: 0;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c18 {
    text-align: center;
    margin-top: 1.6rem;
  }
}

@media (max-width:768px) {
  .c6 {
    width: 25.5rem;
  }
}

@media (max-width:768px) {
  .c22 {
    width: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        aria-label="Toggle light and dark modes"
        class="c2"
      >
        <input
          class="c3"
          type="checkbox"
          value="Toggle light and dark modes"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <svg
          aria-label="Open menu"
          class="c8 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c9"
      >
        <h1
          class="c10 c11"
        >
          <a
            class="c12 c13"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c14"
        >
          <a
            class="c15"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c16"
    >
      <header
        class="c17"
      >
        <h1
          class="c10 c11"
        >
          <a
            class="c12 c13"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c18"
        >
          <h1
            class="c10 c19"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c20"
    >
      <input
        class="c21"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c8 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c22"
    >
      <main
        class="c23"
      >
        <section
          class="c24"
        >
          <a
            href="/posts/usando-effect-hook-hook-de-efeito"
          >
            <img
              alt="Usando Effect Hook (Hook de Efeito)"
              class="c25"
              src="https://res.cloudinary.com/project-cdn/image/upload/v1643992684/use_Effect_hook_62405844a5.png"
            />
          </a>
          <h2
            class="c10 c19"
          >
            <a
              href="/posts/usando-effect-hook-hook-de-efeito"
            >
              Usando Effect Hook (Hook de Efeito)
            </a>
          </h2>
          <p
            class=""
          >
            O Effect Hook (Hook de Efeito) te permite executar efeitos colaterais em componentes funcionais.
          </p>
        </section>
      </main>
      <div
        class="c26"
      >
        <button
          class="c27"
        >
          Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c28"
    >
      <footer
        class="c29"
      >
        <div
          class="c30"
        >
          <div
            class="c31"
          >
            <p>
              A footer paragraph
            </p>
          </div>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c32"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c8"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostTemplate /> Should match snapshot without posts 1`] = `
.c11 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c19 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c23 {
  max-width: 100%;
  width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c24 {
  text-align: center;
  font-size: 1.6rem;
  padding: 3.2rem;
}

.c26 {
  width: 100%;
  text-align: center;
}

.c26 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c27 pre[class*='language-'],
.c27 code[class*='language-'] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,'Andale Mono','Ubuntu Mono','Courier New',monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c27 pre[class*='language-']::selection,
.c27 code[class*='language-']::selection,
.c27 pre[class*='language-'] *::selection,
.c27 code[class*='language-'] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c27 pre[class*='language-'] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c27:not(pre) > code[class*='language-'] {
  padding: 0.1em 0.3em;
  border-radius: 0.3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c27 .namespace {
  opacity: 0.7;
}

.c27 .token.doctype .token.doctype-tag {
  color: #569cd6;
}

.c27 .token.doctype .token.name {
  color: #9cdcfe;
}

.c27 .token.comment,
.c27 .token.prolog {
  color: #6a9955;
}

.c27 .token.punctuation,
.c27 .language-html .language-css .token.punctuation,
.c27 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c27 .token.property,
.c27 .token.tag,
.c27 .token.boolean,
.c27 .token.number,
.c27 .token.constant,
.c27 .token.symbol,
.c27 .token.inserted,
.c27 .token.unit {
  color: #b5cea8;
}

.c27 .token.selector,
.c27 .token.attr-name,
.c27 .token.string,
.c27 .token.char,
.c27 .token.builtin,
.c27 .token.deleted {
  color: #ce9178;
}

.c27 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c27 .token.operator,
.c27 .token.entity {
  color: #d4d4d4;
}

.c27 .token.operator.arrow {
  color: #569cd6;
}

.c27 .token.atrule {
  color: #ce9178;
}

.c27 .token.atrule .token.rule {
  color: #c586c0;
}

.c27 .token.atrule .token.url {
  color: #9cdcfe;
}

.c27 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c27 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c27 .token.keyword {
  color: #569cd6;
}

.c27 .token.keyword.module,
.c27 .token.keyword.control-flow {
  color: #c586c0;
}

.c27 .token.function,
.c27 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c27 .token.regex {
  color: #d16969;
}

.c27 .token.important {
  color: #569cd6;
}

.c27 .token.italic {
  font-style: italic;
}

.c27 .token.constant {
  color: #9cdcfe;
}

.c27 .token.class-name,
.c27 .token.maybe-class-name {
  color: #4ec9b0;
}

.c27 .token.console {
  color: #9cdcfe;
}

.c27 .token.parameter {
  color: #9cdcfe;
}

.c27 .token.interpolation {
  color: #9cdcfe;
}

.c27 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c27 .token.boolean {
  color: #569cd6;
}

.c27 .token.property,
.c27 .token.variable,
.c27 .token.imports .token.maybe-class-name,
.c27 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c27 .token.selector {
  color: #d7ba7d;
}

.c27 .token.escape {
  color: #d7ba7d;
}

.c27 .token.tag {
  color: #569cd6;
}

.c27 .token.tag .token.punctuation {
  color: #808080;
}

.c27 .token.cdata {
  color: #808080;
}

.c27 .token.attr-name {
  color: #9cdcfe;
}

.c27 .token.attr-value,
.c27 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c27 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c27 .token.entity {
  color: #569cd6;
}

.c27 .token.namespace {
  color: #4ec9b0;
}

.c27 pre[class*='language-javascript'],
.c27 code[class*='language-javascript'],
.c27 pre[class*='language-jsx'],
.c27 code[class*='language-jsx'],
.c27 pre[class*='language-typescript'],
.c27 code[class*='language-typescript'],
.c27 pre[class*='language-tsx'],
.c27 code[class*='language-tsx'] {
  color: #9cdcfe;
}

.c27 pre[class*='language-css'],
.c27 code[class*='language-css'] {
  color: #ce9178;
}

.c27 pre[class*='language-html'],
.c27 code[class*='language-html'] {
  color: #d4d4d4;
}

.c27 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c27 .language-html .token.punctuation {
  color: #808080;
}

.c27 pre[data-line] {
  position: relative;
}

.c27 pre[class*='language-'] > code[class*='language-'] {
  position: relative;
  z-index: 1;
}

.c27 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c28 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c28 iframe[src*='ads'] {
  display: none;
}

.c28 p {
  width: 100%;
  margin: 2.4rem 0;
  word-wrap: break-word;
}

.c28 a,
.c28 a:visited,
.c28 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c28 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c28 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c28 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c28 pre code {
  color: inherit;
  background: inherit;
}

.c28 img {
  max-width: 100%;
}

.c28 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c28 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c28 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c28 hr {
  border: none;
  border: 1px solid red;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c28 ul,
.c28 ol {
  margin: 2.4rem 4.0rem;
}

.c28 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c28 table {
  width: 100%;
  border-collapse: collapse;
}

.c28 table td,
.c28 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c28 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c8 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c29 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c13 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c17 {
  max-width: 96rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.6rem;
  padding-bottom: 6.4rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c17 .c10 {
  margin-right: calc(1.6rem - 1rem);
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 2.4rem;
}

.c15 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}

.c15:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c6 {
  width: 27rem;
  height: 100%;
  background: #000000;
  border-top-right-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c6 .c12 {
  margin-top: 6.4rem;
}

.c6 .c12 img {
  border: 0.5rem solid #dc143c;
}

.c6.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c9 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c7 svg {
  width: 3rem;
  color: #FFFFFF;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c7 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c7 .menuIcon {
  padding: 0;
}

.c14 {
  width: 90%;
  margin: 4rem 0;
}

.c1 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c2 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c3:checked + .c4 {
  background: #dc143c;
}

.c3:focus + .c4 {
  box-shadow: 0 0 1px #dc143c;
}

.c3:checked + .c4:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c5 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c5:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.25rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 svg.search-ok-icon,
.c0 svg.search-cancel-icon {
  width: 2.4rem;
  height: 2.4rem;
  margin-left: 1rem;
}

.c0 svg.search-cancel-icon {
  color: #dc143c;
}

.c16 {
  padding-top: 6.4rem;
  padding-left: 20px;
}

.c20 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  padding: 0.5rem 1.6rem;
}

.c21:disabled {
  outline: 0.1rem solid #dc143c;
}

.c22 {
  max-width: 120rem;
  width: 100%;
  margin-bottom: 6.4rem;
}

.c25 {
  width: 100%;
  margin: 0 auto;
  padding: 0;
}

@media (max-width:360px) {
  .c23 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:360px) {
  .c24 {
    padding: 0;
  }
}

@media print {
  .c27 pre[class*='language-'],
  .c27 code[class*='language-'] {
    text-shadow: none;
  }
}

@media (max-width:768px) {
  .c28 {
    font-size: 2rem;
  }

  .c28 pre {
    width: 82%;
  }

  .c28 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c17 {
    margin: 0;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c18 {
    text-align: center;
    margin-top: 1.6rem;
  }
}

@media (max-width:768px) {
  .c6 {
    width: 25.5rem;
  }
}

@media (max-width:768px) {
  .c22 {
    width: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        aria-label="Toggle light and dark modes"
        class="c2"
      >
        <input
          class="c3"
          type="checkbox"
          value="Toggle light and dark modes"
        />
        <span
          class="c4 c5"
        />
      </label>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <svg
          aria-label="Open menu"
          class="c8 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c9"
      >
        <h1
          class="c10 c11"
        >
          <a
            class="c12 c13"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c14"
        >
          <a
            class="c15"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c16"
    >
      <header
        class="c17"
      >
        <h1
          class="c10 c11"
        >
          <a
            class="c12 c13"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c18"
        >
          <h1
            class="c10 c19"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c20"
    >
      <input
        class="c21"
        name="q"
        placeholder="Encontre posts"
        type="search"
        value=""
      />
      <svg
        aria-hidden="true"
        aria-label="Input enabled"
        class="c8 search-ok-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
        />
      </svg>
    </div>
    <div
      class="c22"
    >
      <main
        class="c23"
      >
        <p
          class="c24"
        >
          Nenhum post encontrado aqui =(
        </p>
      </main>
    </div>
    <div
      class="c25"
    >
      <footer
        class="c26"
      >
        <div
          class="c27"
        >
          <div
            class="c28"
          >
            <p>
              A footer paragraph
            </p>
          </div>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c29"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c8"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
